# vessel-ai-attributes

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  model_alternatives.md  pyproject.toml
app/: app_factory.py
app/controllers/: boat_analysis_controller.py
app/models/: boat_analysis.py
app/services/: boat_analysis_service.py
backend/: main.py  pyproject.toml
backend/app/: app_factory.py
backend/app/controllers/: agentic_workflow_controller.py  boat_analysis_controller.py
backend/app/models/: boat_analysis.py
backend/app/services/: additional_agents.py  agentic_workflow.py  boat_analysis_service.py
backend/app/views/: api_routes.py
backend/config/: config.py
backend/data/: membertou_2023_sample_telemetry.csv  membertou_2023_telemetry_sample.csv  membertou_2023_water_current_sample.csv
config/: config.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: AgentResultDisplay.vue  AgenticWorkflow.vue  AnalysisResults.vue  BoatAnalyzer.vue  FinalResultsDisplay.vue  ImageUploader.vue
frontend/src/services/: api.js
